# mammos-analysis

./: CHANGELOG.md  README.md  pyproject.toml
.binder/: environment.yml
.github/workflows/: check-changelog.yml  publish.yml  test.yml
binder/: environment.yml
changes/: 105.changed.md  110.misc.md  112.misc.md  113.misc.md  24.misc.md  31.fixed.md  40.added.md  45.misc.md  50.added.md  53.added.md  53.removed.md  61.misc.md  65.added.md  69.changed.md  70.added.md  79.changed.md  82.changed.md  83.changed.md  98.changed.md
examples/: index.rst  quickstart.ipynb
src/mammos_analysis/: __init__.py  demag.py  hysteresis.py  kuzmin.py
tests/: test_demag.py  test_hysteresis.py  test_kuzmin.py
