[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "mammos-analysis"
version = "0.1.0-dev.202505221528"
description = "Analysis functionality package."
readme = "README.md"
authors = [
  { name = "Andrea Petrocchi" },
  { name = "Swapneel Amit Pathak" },
  { name = "Martin Lang" },
  { name = "Samuel Holt" },
  { name = "Hans Fangohr" },
]
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: BSD License',
  'Operating System :: POSIX',
  'Operating System :: Microsoft :: Windows',
  'Topic :: Scientific/Engineering :: Physics',
]

requires-python = ">=3.11"

dependencies = [
  "mammos_entity >=0.2.1",
  "mammos_units",
  "numpy",
  "pydantic",
  "scipy",
]


[project.urls]
Homepage = "https://MaMMoS-project.github.io"
Documentation = "https://mammos-project.github.io/mammos"
Repository = "https://github.com/MaMMoS-project/mammos-analysis"
Issues = "https://github.com/MaMMoS-project/mammos-analysis/issues"
Changelog = "https://mammos-project.github.io/mammos/changelog"


# pixi
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mammos-analysis = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = [ "dev" ], solve-group = "default" }

[tool.pixi.feature.dev.pypi-dependencies]
jupyter = ">=1.1.1,<2"
hatch = ">=1.14.1,<2"
pytest = "*"
pre-commit = "*"
ipython = ">=9.2.0,<10"

[tool.pixi.feature.dev.tasks]
example = "jupyter-lab docs/example.ipynb"
build = "hatch build"
tests = "pytest -vv"
install-precommits = "pre-commit install"
run-precommits = { cmd = [ "pre-commit", "run", "--all-files" ], depends-on = [ "install-precommits" ] }
tag-version = "git tag -s -a $(hatch version)"


# ruff
[tool.ruff]
target-version = "py39"
line-length = 88
indent-width = 4
respect-gitignore = true
exclude = []

[tool.ruff.lint]
# Ruff default rules, pydocstyle, and pycodestyle warnings
select = ["D", "E4", "E7", "E9", "F", "W"]
ignore = []

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

